# JonssonicPlugins

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: release.yml
demos/BiquadDemo/: CMakeLists.txt  Params.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
demos/OversamplingDemo/: CMakeLists.txt  Params.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
demos/SVFDemo/: CMakeLists.txt  Params.h  PluginEditor.cpp  PluginEditor.h  PluginLookAndFeel.h  PluginProcessor.cpp  PluginProcessor.h
framework/: CMakeLists.txt
framework/include/: MinimalJuceHeader.h  Version.h.in
framework/include/gui/: ControlPanel.h  ControlPanelConfig.h  CustomLookAndFeel.h  GainReductionMeterComponent.h  LevelMeterComponent.h
framework/include/parameters/: ParameterGroup.h  ParameterIdUtils.h  ParameterManager.h  ParameterSet.h  ParameterTypes.h  Parameters.h  QueuedParameter.h
framework/include/utils/: ResourceUtils.h
framework/include/visualizers/: GainReductionMeterState.h  LevelMeterState.h  VisualizerManager.h  VisualizerSet.h  VisualizerTypes.h
plugins/Chorus/: CMakeLists.txt  Params.h  PluginEditor.cpp  PluginEditor.h  PluginLookAndFeel.h  PluginProcessor.cpp  PluginProcessor.h
plugins/Compressor/: CMakeLists.txt  Params.h  PluginEditor.cpp  PluginEditor.h  PluginLookAndFeel.h  PluginProcessor.cpp  PluginProcessor.h  Visualizers.h
plugins/Delay/: CMakeLists.txt  Params.h  PluginEditor.cpp  PluginEditor.h  PluginLookAndFeel.h  PluginProcessor.cpp  PluginProcessor.h
plugins/Distortion/: CMakeLists.txt  Params.h  PluginEditor.cpp  PluginEditor.h  PluginLookAndFeel.h  PluginProcessor.cpp  PluginProcessor.h
plugins/EQ/: CMakeLists.txt  Params.h  PluginEditor.cpp  PluginEditor.h  PluginLookAndFeel.h  PluginProcessor.cpp  PluginProcessor.h
plugins/Flanger/: CMakeLists.txt  Params.h  PluginEditor.cpp  PluginEditor.h  PluginLookAndFeel.h  PluginProcessor.cpp  PluginProcessor.h
plugins/Reverb/: CMakeLists.txt  Params.h  PluginEditor.cpp  PluginEditor.h  PluginLookAndFeel.h  PluginProcessor.cpp  PluginProcessor.h
plugins/_Template/: CMakeLists.txt  Params.h  PluginEditor.cpp  PluginEditor.h  PluginLookAndFeel.h  PluginProcessor.cpp  PluginProcessor.h
plugins/_Template/resources/: CMakeLists.txt
resources/: CMakeLists.txt
tools/: init_new_plugin.py
